2008-10-10  Nathan Froyd  <froydnj@codesourcery.com>

	* readelf.c (display_power_gnu_attribute): Decode
	Tag_GNU_Power_ABI_Struct_Return.

2008-10-10  Alan Modra  <amodra@bigpond.net.au>

	* embedspu.sh: Pass -Wa,-noexecstack to $CC.

2008-10-09  Kai Tietz  <kai.tietz@onevision.com>

	* dlltool.c (PAGE_SIZE): Make sure it has bfd_vma type.
	(PAGE_MASK): Likewise.
	(sfunc): Change to address size of bfd_vma for base-file.
	(flush_page): Likewise.
	(gen_exp_file): Likewise.

2008-10-07  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* readelf.c (process_section_headers): Do not cut the section names and
	types if running with --wide.

2008-10-06  Tom Tromey  <tromey@redhat.com>

	* dwarf.c (display_debug_frames): Change text for uniformity.
	(process_debug_info): Likewise.
	(display_debug_aranges): Likewise.  Indent address output.
	(display_debug_pubnames): Print offset in hex.

2008-10-02  Andrew Paprocki  <andrew@ishiboo.com>

	PR 6934
	* stabs.c (parse_stab_string): Parse and ignore =Y<name> strings
	generated by the SUNPro C++ compiler.

2008-09-30  Andrew Paprocki  <andrew@ishiboo.com>

	PR 6922
	* stabs.c (parse_stab_sun_builtin_type): Parse, but ignore SUN's
	'b' and 'v' extensions.

2008-09-29  Peter O'Gorman  <pogma@thewrittenword.com>
	    Steve Ellcey  <sje@cup.hp.com>

	* configure: Regenerate for new libtool.
	* aclocal.m4: Ditto.
	* Makefile.in: Ditto.
	* doc/Makefile.in: Ditto.

2008-09-28  Alan Modra  <amodra@bigpond.net.au>

	* objcopy.c (setup_section): Set elf_group_id.

2008-09-24  Richard Henderson  <rth@redhat.com>

	* dwarf.c (size_of_encoded_value, get_encoded_value): Move up.
	(decode_location_expression): Add section parameter.  Handle
	DW_OP_GNU_encoded_addr.
	(read_and_display_attr_value): Update decode_location_expression call.
	(display_debug_loc, display_debug_frames): Likewise.

2008-09-25  Alan Modra  <amodra@bigpond.net.au>

	PR 6913
	* dwarf.c (print_dwarf_vma): Don't call printf without format string.
